--- a/frontend/src/components/css/Loading.scss
+++ b/frontend/src/components/css/Loading.scss
@@ -3,6 +3,6 @@
 .loading {
   text-align: center;
   margin-top: 10em;
-  color: $main-color;
+  color: $nav-color;
   text-shadow: 2px 2px 2px $black;
 }
