--- a/frontend/src/components/css/ServerList.scss
+++ b/frontend/src/components/css/ServerList.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   background-color: $body-color;
+  min-height: 100vh;
 
   .server-list {
     width: 60%;
