create search input with filter functionality

--- a/frontend/src/components/css/Global.scss
+++ b/frontend/src/components/css/Global.scss
@@ -7,6 +7,7 @@ $table-heading-color: #9ca7d3;
 $online-color: #24a1a9;
 $offline-color: #ea5885;
 $nav-border-color: #757b8f;
+$input-border-color: #d4d7e1;
 $black: #000;
 $white: #fff;
 
