--- a/frontend/src/components/css/ServerList.scss
+++ b/frontend/src/components/css/ServerList.scss
@@ -6,11 +6,12 @@
   justify-content: center;
   align-items: center;
   background-color: $body-color;
-  min-height: 100vh;
 
   .server-list {
     width: 60%;
     padding: 0;
     margin: 0;
+    color: $nav-color;
+    min-height: 100vh;
   }
 }
