--- a/frontend/src/components/css/Server.scss
+++ b/frontend/src/components/css/Server.scss
@@ -5,7 +5,7 @@
   border: 2px solid $list-border-color;
   list-style: none;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   margin: 0 1px;
 
