--- a/frontend/src/components/css/ServerList.scss
+++ b/frontend/src/components/css/ServerList.scss
@@ -15,3 +15,11 @@
     min-height: 100vh;
   }
 }
+
+@media (max-width: 500px) {
+  .server-container {
+    .server-list {
+      width: 80%;
+    }
+  }
+}
